objects/Account.object
<CustomObject>
    <fields>
        <fullName>AP_Territory_Owner__c</fullName>
        <formula>AP_Territory__r.Owner:User.FirstName&amp;&quot; &quot;&amp;AP_Territory__r.Owner:User.LastName</formula>
        <label>AP Territory Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AP_Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AP Territory</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Territory__c.Territory_Type__c</field>
                <operation>equals</operation>
                <value>AP, HY</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Territory__c</referenceTo>
        <relationshipLabel>AP Accounts</relationshipLabel>
        <relationshipName>AP_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AQ_Territory_Owner__c</fullName>
        <formula>AQ_Territory__r.Owner:User.FirstName&amp;&quot; &quot;&amp; AQ_Territory__r.Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AQ Territory Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AQ_Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AQ Territory</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Territory__c.Territory_Type__c</field>
                <operation>equals</operation>
                <value>AQ</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Territory__c</referenceTo>
        <relationshipLabel>AQ Accounts</relationshipLabel>
        <relationshipName>AQ_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AR_0_30_Days__c</fullName>
        <formula>REPORT_AR_0_30_Days__c</formula>
        <label>AR 1-30 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AR_121_150_Days__c</fullName>
        <formula>REPORT_AR_121_150_Days__c</formula>
        <label>AR 121-150 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AR_121_180_Days__c</fullName>
        <formula>REPORT_AR_121_180_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AR 121-180 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AR_180_Days__c</fullName>
        <formula>REPORT_AR_180_Days__c</formula>
        <label>AR &gt;180 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AR_Current__c</fullName>
        <label>AR Current</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AR_Last_Report__c</fullName>
        <formula>REPORT_AR_Last_Report__c</formula>
        <inlineHelpText>Report is generated monthly and displays AR for previous month. Saba/LMS Code on Account must match Saba Org ID exactly for AR data to populate.</inlineHelpText>
        <label>AR as of</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AR_Status__c</fullName>
        <formula>IF( ISPICKVAL( Payment_Status__c , &quot;Terminated&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=015d00000005ykO&quot;,&quot;Payment Status = Terminated&quot;),
IF(   AR_180_Days__c &gt; 0.00, IMAGE(&quot;/servlet/servlet.FileDownload?file=015d00000005ykO&quot;,&quot;AR&gt;180&quot;),
IF(   AR_121_180_Days__c  &gt; 0.00, IMAGE(&quot;/servlet/servlet.FileDownload?file=015d00000005ykO&quot;,&quot;AR 121-180 Days&quot;),
IF(  AR_121_150_Days__c &gt; 0.00, IMAGE(&quot;/servlet/servlet.FileDownload?file=015d00000005ykQ&quot;,&quot;AR 121-150 Days&quot;),
IF(  AR_91_120_Days__c &gt; 0.00, IMAGE(&quot;/servlet/servlet.FileDownload?file=015d00000005ykQ&quot;,&quot;AR 91-120 Days&quot;),
IF(  AR_61_90_Days__c &gt; 0.00, IMAGE(&quot;/servlet/servlet.FileDownload?file=015d00000005ykR&quot;,&quot;AR 61-90 Days&quot;),
IF(   AR_31_60_Days__c  &gt; 0.00, IMAGE(&quot;/servlet/servlet.FileDownload?file=015d00000005ykP&quot;,&quot;AR 31-60 Days&quot;),
IF(  AR_0_30_Days__c &gt; 0.00, IMAGE(&quot;/servlet/servlet.FileDownload?file=015d00000005ykP&quot;,&quot;AR 0-30 Days&quot;),
IF( AR_Current__c &gt; 0.00, IMAGE(&quot;/servlet/servlet.FileDownload?file=015d00000005ykP&quot;,&quot;AR Current&quot;), 
IF( NOT(ISBLANK( AR_Last_Report__c )), IMAGE(&quot;/servlet/servlet.FileDownload?file=015d0000003XtD2&quot;,&quot;No open invoices/Credit balance&quot;),
IMAGE (&quot;/servlet/servlet.FileDownload?file=015d0000003XuPx&quot;,&quot;No data has been loaded&quot;)))))))))))</formula>
        <inlineHelpText>AR ages from Invoice Due Date &amp; status flag triggered by oldest AR
Green Check-No Open Invoice/Credit Balance
Green Flag-Current,1-30 days past due
Yellow Flag-31-60 days past due
Red Flag-61-90 &amp; 91-120 days past due
Attn Sign-121-180+ days past due</inlineHelpText>
        <label>AR Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Auto_Number__c</fullName>
        <description>The auto generated account number relative to the household. This field can also be used as a unique ID for external systems.</description>
        <displayFormat>{0000000}</displayFormat>
        <externalId>true</externalId>
        <label>Account Auto-Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Account_Source_API__c</fullName>
        <description>Only used for background processes not intended to be exposed on page layouts.</description>
        <inlineHelpText>Where did the account got inserted from: Quick Create CDI, User etc</inlineHelpText>
        <label>Account Source API</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>User</fullName>
                    <default>true</default>
                    <label>User</label>
                </value>
                <value>
                    <fullName>Quick Create CDI</fullName>
                </value>
                <value>
                    <fullName>Smart Account Search</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <formula>IMAGE(  CASE( 
Status__c , &quot;Red&quot;, &quot;/img/samples/flag_red.gif&quot;, &quot;Green&quot;, &quot;/img/samples/flag_green.gif&quot;,&quot;Yellow&quot;,&quot;/img/samples/flag_yellow.gif&quot;,&quot;/s.gif&quot;)  , &quot;Accounts Status Flag&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Contract_Exception_Status__c</fullName>
        <inlineHelpText>Approval for Exception Processing of Orders</inlineHelpText>
        <label>Active Contract Exception Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active_Contract_Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Request a Contract Exception</inlineHelpText>
        <label>Active Contract Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Add_Roster__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If Yes, Invoice Delivery Method must be Email or Portal.</inlineHelpText>
        <label>Add Roster</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agreement_Covers__c</fullName>
        <inlineHelpText>Single Location - only one site 
All Domestic Locations - all locations of the org
MOU- parent association only for Memorandum of Understanding
Other- any other situation, e.g. regional offices or franchises with several locations, etc. Provide detail</inlineHelpText>
        <label>Agreement Covers</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single Location</fullName>
                    <default>true</default>
                    <label>Single Location</label>
                </value>
                <value>
                    <fullName>All Domestic Locations</fullName>
                </value>
                <value>
                    <fullName>MOU</fullName>
                </value>
                <value>
                    <fullName>Other, please describe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agreement_Flag__c</fullName>
        <formula>IMAGE(
CASE(Is_Pricing_Agreement__c,
&quot;Yes&quot;, &quot;/servlet/servlet.FileDownload?file=0150V00000DDGLz&quot;,
&quot;/s.gif&quot;),
TEXT(Is_Pricing_Agreement__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>New agreements on this account may be restricted, please look further if flagged</inlineHelpText>
        <label>Agreement Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Learn_to_Swim_Facility__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicator for Organizations that are approved for Learn to Swim classes.</inlineHelpText>
        <label>Approved Learn to Swim Facility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_to_Post_HAVE_A_FEE_courses__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved to Post HAVE A FEE courses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_to_Post_NO_FEE_courses_RCO_LTP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved to Post NO FEE courses RCO/LTP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_SCC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned SCC</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGST_Employee_Count__c</fullName>
        <inlineHelpText>Total number employed by this company.</inlineHelpText>
        <label>BGST Employee Count</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-10</fullName>
                </value>
                <value>
                    <fullName>11-25</fullName>
                </value>
                <value>
                    <fullName>26-50</fullName>
                </value>
                <value>
                    <fullName>51-100</fullName>
                </value>
                <value>
                    <fullName>101-250</fullName>
                </value>
                <value>
                    <fullName>251-500</fullName>
                </value>
                <value>
                    <fullName>501-1000</fullName>
                </value>
                <value>
                    <fullName>1000+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BGST_Industry__c</fullName>
        <description>Industry Field used for the BGST Profile</description>
        <label>BGST Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Forestry, Fishing and Hunting</fullName>
                </value>
                <value>
                    <fullName>Mining, Quarrying, and Oil and Gas Extraction</fullName>
                </value>
                <value>
                    <fullName>Utilities</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Wholesale Trade</fullName>
                </value>
                <value>
                    <fullName>Retail Trade</fullName>
                </value>
                <value>
                    <fullName>Transportation and Warehousing</fullName>
                </value>
                <value>
                    <fullName>Information</fullName>
                </value>
                <value>
                    <fullName>Finance and Insurance</fullName>
                </value>
                <value>
                    <fullName>Real Estate and Rental and Leasing</fullName>
                </value>
                <value>
                    <fullName>Professional, Scientific and Technical Services</fullName>
                </value>
                <value>
                    <fullName>Management of Companies and Enterprises</fullName>
                </value>
                <value>
                    <fullName>Administrative and Support and Waste Management and Remediation Services</fullName>
                </value>
                <value>
                    <fullName>Educational Services</fullName>
                </value>
                <value>
                    <fullName>Health Care and Social Assistance</fullName>
                </value>
                <value>
                    <fullName>Arts, Entertainment, and Recreation</fullName>
                </value>
                <value>
                    <fullName>Accommodation and Food Services</fullName>
                </value>
                <value>
                    <fullName>Other Services, except Public Administration</fullName>
                </value>
                <value>
                    <fullName>ublic Administration</fullName>
                </value>
                <value>
                    <fullName>Unclassified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BGST_Lead_Source__c</fullName>
        <description>Lead Source Field used for BGST Profile</description>
        <label>BGST Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Forestry, Fishing and Hunting</fullName>
                </value>
                <value>
                    <fullName>Mining, Quarrying, and Oil and Gas Extraction</fullName>
                </value>
                <value>
                    <fullName>Utilities</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Wholesale Trade</fullName>
                </value>
                <value>
                    <fullName>Retail Trade</fullName>
                </value>
                <value>
                    <fullName>Transportation and Warehousing</fullName>
                </value>
                <value>
                    <fullName>Information</fullName>
                </value>
                <value>
                    <fullName>Finance and Insurance</fullName>
                </value>
                <value>
                    <fullName>Real Estate and Rental and Leasing</fullName>
                </value>
                <value>
                    <fullName>Professional, Scientific and Technical Services</fullName>
                </value>
                <value>
                    <fullName>Management of Companies and Enterprises</fullName>
                </value>
                <value>
                    <fullName>Administrative and Support and Waste Management and Remediation Services</fullName>
                </value>
                <value>
                    <fullName>Educational Services</fullName>
                </value>
                <value>
                    <fullName>Health Care and Social Assistance</fullName>
                </value>
                <value>
                    <fullName>Arts, Entertainment, and Recreation</fullName>
                </value>
                <value>
                    <fullName>Accommodation and Food Services</fullName>
                </value>
                <value>
                    <fullName>Other Services, except Public Administration</fullName>
                </value>
                <value>
                    <fullName>ublic Administration</fullName>
                </value>
                <value>
                    <fullName>Unclassified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BGST_Rating__c</fullName>
        <description>Rating fiedl used for BGST Profile</description>
        <label>BGST Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hot</fullName>
                </value>
                <value>
                    <fullName>Warm</fullName>
                </value>
                <value>
                    <fullName>Cold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BI_City__c</fullName>
        <label>BI City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BI_Phone__c</fullName>
        <label>BI Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BI_Postal_Code_Plus_4__c</fullName>
        <label>BI Postal Code Plus 4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BI_Postal_Code__c</fullName>
        <label>BI Postal Code</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BI_State__c</fullName>
        <label>BI State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BI_Street_Address__c</fullName>
        <label>BI Street Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bankruptcy_Date__c</fullName>
        <label>Bankruptcy Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bankruptcy_Type__c</fullName>
        <label>Bankruptcy Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chapter 7 (out of business)</fullName>
                    <label>Chapter 7 (new Acct. required)</label>
                </value>
                <value>
                    <fullName>Chapter 9 (municipal)</fullName>
                </value>
                <value>
                    <fullName>Chapter 11 (restructure)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Contact responsible for billing questions</inlineHelpText>
        <label>Billing Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_email__c</fullName>
        <formula>Billing_Contact__r.Email</formula>
        <label>Billing Contact email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_extension__c</fullName>
        <description>Field added to Accounts for mail merge purposes</description>
        <formula>Billing_Contact__r.Extension__c</formula>
        <label>Billing Contact extension</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_phone__c</fullName>
        <formula>Billing_Contact__r.Phone</formula>
        <label>Billing Contact phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street_Custom__c</fullName>
        <formula>SUBSTITUTE(BillingStreet ,SUBSTITUTE($Label.linebreak, &quot;-&quot;, &quot;&quot;),&quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Street Custom</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFS_Account_Number_1__c</fullName>
        <label>CFS Account Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFS_Account_Number__c</fullName>
        <displayFormat>SF{00000000}</displayFormat>
        <label>SalesForce Account Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Collections_Termination_Date__c</fullName>
        <formula>REPORT_Collections_Termination_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Collections Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Consolidate_Period_Fulfillments__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If multiple transactions occur in the same invoice cycle they will appear on the same invoice.</inlineHelpText>
        <label>Consolidate Transactions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copy_Billing_to_Shipping__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox will run a formula that copies all of the Billing Address information to the Shipping Address Fields.</description>
        <label>Copy Billing to Shipping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <description>County field included in address section of Account and Contact page layouts.</description>
        <label>County</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coupon_1_Expiration__c</fullName>
        <label>Coupon 1 Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Coupon_2_Expiration__c</fullName>
        <label>Coupon 2 Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Coupon_3_Expiration__c</fullName>
        <label>Coupon 3 Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Coupon_Code_1__c</fullName>
        <label>Coupon Code 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coupon_Code_2__c</fullName>
        <label>Coupon Code 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coupon_Code_3__c</fullName>
        <label>Coupon Code 3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Available__c</fullName>
        <description>Available Credit for purchases</description>
        <formula>Credit_Limit__c - Total_AR__c - Open_Order_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Credit Available = Credit Limit – (Open Orders + Total AR)</inlineHelpText>
        <label>Credit Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Limit__c</fullName>
        <description>Authorized Credit Extension for Customer</description>
        <inlineHelpText>Amount of credit extended to a customer for invoicing purposes. Automatically defaulted to $10,000 when the Prefered Payment Method is set to Invoice or $0 if the Prefered Payment method is set to Credit Card. Once saved, you may updated the credit limit.</inlineHelpText>
        <label>Credit Limit</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_PO_Expiration_Date__c</fullName>
        <inlineHelpText>This is the same as the Expiration Date on the Purchase Order in Saba.</inlineHelpText>
        <label>Customer PO# Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_PO_Required_on_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check box if customer requires their PO to be referenced on the invoice.</inlineHelpText>
        <label>Customer PO Required on Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_PO__c</fullName>
        <inlineHelpText>This is the same as the Customer PO # in Saba.</inlineHelpText>
        <label>Customer PO#</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_has_AEDs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer has AEDs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is utilized to support the data migration process.  It will contain a combination of the source system identifier and the source system&apos;s unique record identifier.  This field should be deleted after all migration activities are complete.</description>
        <externalId>true</externalId>
        <label>DM External Id</label>
        <length>70</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DM_Legacy_Owner_Name__c</fullName>
        <description>This is the record owner&apos;s name from the legacy source system.  This field is used for data migration purposes only.</description>
        <inlineHelpText>This is the record owner&apos;s name from the legacy source system.  This field is used for data migration purposes only.</inlineHelpText>
        <label>DM Legacy Owner Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNS_Number__c</fullName>
        <label>DUNS Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delta_Data_Migration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Checked, this record was migrated as part of the Delta Data migration project</description>
        <inlineHelpText>If Checked, this record was migrated as part of the Delta Data migration project</inlineHelpText>
        <label>Delta Data Migration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Details_of_Agreement_Coverage__c</fullName>
        <label>Details of Agreement Coverage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Estimated_Annual_Enrollees__c</fullName>
        <inlineHelpText>Estimated annual enrollees from initial interview.</inlineHelpText>
        <label>Estimated Annual Enrollees</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0-75</fullName>
                </value>
                <value>
                    <fullName>76-500</fullName>
                </value>
                <value>
                    <fullName>501-999</fullName>
                </value>
                <value>
                    <fullName>1000+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Extension__c</fullName>
        <description>Phone extension for business numbers</description>
        <label>Extension</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External ID Used for LMS Integration</description>
        <label>External ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FS_Territory_Owner__c</fullName>
        <formula>FS_Territory__r.Owner:User.FirstName&amp;&quot; &quot;&amp;FS_Territory__r.Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FS Territory Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FS Territory</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Territory__c.Territory_Type__c</field>
                <operation>equals</operation>
                <value>FS, HY</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Territory__c</referenceTo>
        <relationshipLabel>FS Accounts</relationshipLabel>
        <relationshipName>FS_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FY17Assigned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FY17Assigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fiscal_Cycle__c</fullName>
        <label>Fiscal Cycle</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flagged_For_Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flagged For Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HQ_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to denote Headquarters for Multi-jurisdictional purposes</description>
        <label>HQ Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Has_Only_Attachments_Or_Notes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Only Attachments Or Notes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Have_A_Fee_Expiration_Date__c</fullName>
        <label>Have A Fee Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Include_Roster__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If Yes, Invoice Delivery Method must be Email or Portal.</inlineHelpText>
        <label>Include Roster</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inherit_Parent_Terms__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select if you want the Account to Inherit the 
- Available Credit 
- Payment Terms
from Parent Account</inlineHelpText>
        <label>Inherit Parent Terms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inv_Del_Assign_Date__c</fullName>
        <inlineHelpText>This is the date that the Invoice Delivery Type was assigned to the account.</inlineHelpText>
        <label>Inv Del Assign Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Delivery_Frequency__c</fullName>
        <description>This field indicates the invoice delivery frequency for a customer.</description>
        <label>Invoice Delivery Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>4x/Monthly</fullName>
                    <default>true</default>
                    <label>4x/Monthly</label>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Delivery_Type__c</fullName>
        <inlineHelpText>The default invoice delivery method is Postal Mail.  In order to change method customer must meet approval criteria.</inlineHelpText>
        <label>Invoice Delivery Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Postal Mail</fullName>
                    <default>true</default>
                    <label>Postal Mail</label>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Portal Billing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>